--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -1,19 +1,23 @@
 apiVersion: v1
 data:
+apiVersion: v1
+data:
   mapRoles: |
-    - groups:
-      - system:masters
-      rolearn: arn:aws:iam::160738353213::role/UdacityFlaskDeployCBKubectlRole
-      username: build
     - groups:
       - system:bootstrappers
       - system:nodes
       rolearn: arn:aws:iam::160738353213:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-O23XD3K2AYCB
       username: system:node:{{EC2PrivateDNSName}}
+    - groups:
+      - system:masters
+      rolearn: arn:aws:iam::160738353213:role/UdacityFlaskDeployCBKubectlRole
+      username: build
+  mapUsers: |
+    []
 kind: ConfigMap
 metadata:
   creationTimestamp: "2022-06-20T19:59:51Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "1756"
+  resourceVersion: "7966"
   uid: 67d2253f-2d06-4ba2-8b51-35cb0f56f12a
